# VeriGPU

./: .gitignore  LICENSE  README.md  assembler.py  comp.sv  comp_driver.sv  mem.sv  prog1.hex  prog2.asm  prog3.asm  prog4.asm  prog5.asm  requirements.txt  run.py  setup.cfg  setup.py  test_mem.sv  yosys.tcl
.circleci/: config.yml
cicd/: Dockerfile  build-docker.sh  check_markdown.sh  markdown-link-check-config.json  run-behav-verilator.sh  run-behav.sh  run-gls-verilator.sh  run-gls.sh  run-py.sh  run-single-source.sh  run-tiiming.sh  run-timing.sh  run-wholecomp-gls.sh  run.sh
cicd/docker_files/: llvm-sources.list
docker/: Dockerfile  build.sh
docs/: assembler.md  cell_areas.txt  cell_timings.txt  coding_guidelines.md  hip.md  installation.md  metrics.md  old_readme_bits.md  planning.md  states.md  tech_details.md  timing.md  todo.txt  verification.md  verification_guidelines.md
docs/timings/: int_mul.md
examples/: README.md  calc_primes_expected.txt  from_clang1.asm  matrix_mul.asm  prog10.asm  prog10_expected.txt  prog11.asm  prog11_expected.txt  prog12.asm  prog12_expected.txt  prog13_expected.txt  prog14.asm  prog14_expected.txt  prog15.asm  prog15_expected.txt  prog16_expected.txt  prog17.asm  prog17_expected.txt  prog18.asm  prog18_expected.txt  prog19.asm  prog19_expected.txt  prog2.asm  prog20.asm  prog20_expected.txt  prog21_expected.txt  prog22_expected.txt  prog2_expected.txt  prog3.asm  prog3_expected.txt  prog4.asm  prog4_expected.txt  prog5.asm  prog5_expected.txt  prog6.asm  prog6_expected.txt  prog7.asm  prog7_expected.txt  prog8.asm  prog8_expected.txt  (+23 more)
examples/compute_unit/: README.md
examples/cpp_single_source/: README.md  data_transfer.cpp  matrix_mul.cpp  mul_floats.cpp  mul_ints.cpp  run.sh  run_all.sh  sum_floats.cpp  sum_ints.cpp
examples/direct/: README.md  calc_factorial.asm  calc_primes.asm  from_clang1.asm  matrix_mul.asm  matrix_mul_from_clang.asm_  prime_numbers_cpp.asm  sieve_eratosthenes.asm  sum_ints_from_unified_source.asm  test_addi.asm  test_divu_modu_mul.asm  test_float_load_store.asm  test_li.asm  test_li_float.asm  test_load_store.asm  test_lui_auipc.asm  test_ops.asm  test_out.asm
examples/expected/: calc_factorial_expected.txt  matrix_mul_expected.txt  sum_ints_from_unified_source_expected.txt  test_addi_expected.txt  test_float_add_sum_expected.txt  test_float_load_store_expected.txt  test_lw_expected.txt  test_ops_expected.txt  test_sw_expected.txt
examples/pytorch/: README.md  test_add.py
prot/: README.md  add_one.sv  add_one_2chunks.sv  add_one_2chunks_driver.sv  add_one_chunked.sv  add_one_chunked_driver.sv  apu.sv  apu_test.sv  clocked_counter.sv  clocked_counter_test.sv  comb_vs_ff.sv  comb_vs_ff_test.sv  div.sv  int_div.sv  int_div_pipeline.sv  mul.sv  posedge_case.sv  reg_file_dual_write.sv  reg_file_test.sv  synth_out3.sv  synth_out3_gls.sh  synth_out3_test.sv  synth_out_gls.sh  synth_out_test.sv  test_bus.sv  test_clocked_counter.sv  test_hier.sv  test_int_div_pipeline.sv  test_test_timings.sv  test_test_timings_test.sv  test_test_timings_test_gls.sh  test_tristate_bus.sv
prot/add/: test_signed_add.sv
prot/compute_unit/: README.md  compute_unit.sv
prot/cpp/: test.cpp
prot/div/: int_div_pipeline.sv
prot/float/: float_add.sv  float_add_pipeline.sv  float_add_pipeline_test.sv  float_add_test.sv  float_mul.sv  float_mul_pipeline.sv  float_mul_pipeline2.sv  float_mul_pipeline3.sv  (+5 more)
prot/verilator/prot_comp/: CMakeLists.txt  run.sh  verilator_driver.cpp
prot/verilator/prot_init/: CMakeLists.txt  prot_init.cpp  prot_init.sv  run-with-bash.sh  run-with-cmake.sh  run.sh
prot/verilator/prot_single_source/: CMakeLists.txt  README.md  build-cmake.sh  gpu_runtime.cpp  gpu_runtime.h  kernel_compile_defs.h  kernel_launch.cpp  kernel_launch.h  kernel_launch_ext.h  launch_args.h  llvm_dump.h  mutations.cpp  patch_hostside.cpp  patch_hostside.h  readIR.cpp  run-clang.sh  stringhelper.cpp  stringhelper.h  vector_types.cpp
prot/verilator/prot_unified_source/: CMakeLists.txt  controller.sv  gpu_runtime.cpp  gpu_runtime.h  my_gpu_test_client.cpp  verilator_driver.cpp
src/: README.md  apu.sv  apu_test.sv  assembler.py  assert.sv  assert_ignore.sv  comp.sv  comp_driver.sv  const.sv  controller.sv  core.sv  core_driver.sv  float_add_pipeline.sv  global_mem_controller.sv  gpu_card.sv  gpu_controller.sv  gpu_die.sv  int_div_regfile.sv  mem.sv  mem_16mb.sv  mem_delayed.sv  mem_delayed2.sv  mem_delayed_large.sv  mem_delayed_test.sv  mem_small.sv  op_const.sv  proc.sv  proc_reg_wr_mux.sv  reg_file.sv  reg_test.sh  sta.tcl  test_mem.sv  timing.py  timings_ece474.txt  yosys.tcl
src/gpu_runtime/: CMakeLists.txt  README.md  build-cmake.sh  gpu_runtime.cpp  gpu_runtime.h  hip_api.cpp  kernel_compile_defs.h  kernel_launch.cpp  launch_args.h  mutations.h  patch_hostside.cpp  readIR.cpp  run.sh-maybe-unused  type_dumper.cpp  type_dumper.h  vector_types.h
src/gpu_runtime/hip/: driver_types.h  hip_runtime_api_shortened.h
src/verilator/: CMakeLists.txt  README.md  run.sh  run_netlist.sh  verilator_driver.cpp
test/: README.md  apu_regfile_test.sv  delay_prop_proc.sh  get_prog_cycles.py  gls_int_div_regfile.sh  gls_proc.sh  gls_tests.sh  int_div_regfile_comp.sh  int_div_regfile_comp_gls.sh  int_div_regfile_test.sh  int_div_regfile_test.sv  int_div_regfile_test2.sh  int_div_regfile_test2_gls.sh  int_div_regfile_test_gls.sh  mem_delayed_test.sh  mem_delayed_test.sv  mem_delayed_test_gls.sh  mem_simulated_delay.sv  proc_gls.sh  reg_file_test.sh  reg_test.sh  run_sv_tests.sh  test_assembler.py  test_timing.py
test/behav/float/verilator/: CMakeLists.txt  float_add_pipeline_test_vtor.cpp  float_add_pipeline_test_vtor.sh  float_add_pipeline_test_vtor.sv  float_mul_pipeline_test_vtor.cpp  float_mul_pipeline_test_vtor.sh  float_mul_pipeline_test_vtor.sv  verilator_driver.cpp  verilator_test_runner.cpp
test/behav/verilator/: CMakeLists.txt  run.sh  run_netlist.sh  verilator_driver.cpp
toy_proc/: assembler.py  run_yosys.py  timing.py
verigpu/: README.md  assembler.py  run_yosys.py  stub_hip_api.py  test_hip.py  timing.py
(+225 files in other folders)
